tests/codegen/errors/reader/numeric-literals/atom.reader.error.reader.radix.too.low/reader-radix-too-low.mon
;; TEST-ID: tests.codegen.reader-error.reader-radix-too-low
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/numeric-literals
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: radix 1 out of range (must be 2–36)
;; TEST-ATOM: atom.reader.error.reader.radix.too.low
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.radix.too.low
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: radix 1 out of range (must be 2–36)
;; TEST-READER-PATH: reader.c:1 lexer.radix
;; TEST-CODEGEN-PATH: diagnostic.lexer.radix
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:1 radix 1 out of range (must be 2–36)
;; TEST-USES-ATOM: atom.reader.error.reader.radix.too.low
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.lexer.radix
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/numeric-literals/atom.reader.error.reader.radix.too.low
;; TEST-MENU-PATH: codegen/errors/reader/numeric-literals/atom.reader.error.reader.radix.too.low
;; TEST-ATOM-LEAF: atom.reader.error.reader.radix.too.low
;; TEST-CLI-TARGET: codegen errors reader numeric-literals

(module Main)
(show 1r0)
